# Logseq-to-Obsidian

./: README.md  pyproject.toml
logseq2obsidian/: convert.py
tests/: test_convert.py
