[tool.poetry]
name = "logseq2obsidian"
version = "0.1.0"
description = ""
authors = ["coffeepenbit <13698065+coffeepenbit@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
